2012-07-15 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-04-05
	* revert accidental change of default overwriting event ID to true

2012-07-15 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-04-04
	* fix incorrect commit to the MAIN branch
	* faking LS added to the OldAutoBU branch

2012-04-06  Srecko Morovic  <srecko.morovic@cern.ch>
	* tag V01-00-04
	* branching point before replacing HEAD with new AutoBU
	* new script which waits for 
	application transitions and does same sequence
	as RCMS playback system, removed older START
	* AutoBU improved to handle stop and halt transitions,
	this requires new playback module,
	EventFilter/PlaybackRawDataProvider V00-02-07

2011-09-01  Andrei Spataru  <andrei.cristian.spataru@cern.ch>
	* added START script and State.pm
	* modification to initialize script to kill running xdaq
 	applications on destroy

2011-04-12  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-03
	* small improvements to initialize script
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-02
	* small fixes and emulateLS better handling

2011-01-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-01
	* added option to turn off iDie

2011-01-19  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-00
	* merge all back from branch
	* initialize further improved
	
2010-11-17  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27-04
	* general overhaul of "initialize" script 

2010-01-22  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27-01
	* fix segfault in event id override only spotted on sl5 !?!

2009-07-30  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-00
	* added AutoTrigger features
	* Nota Bene: this tag may break compatibility with some playback features

2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27-00
	* removed warning from cast for 64bit compilation
	
2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27
	* modifications for CLHEP 
