@@ -1,3 +1,9 @@
+2013-01-10 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-00-04-08
+	* fixed exception specification changes in BU.h
+	* overwriting event ID in GTP (EVM) FED
+
 2012-07-15 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-00-04-05
